<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstTaskFragment">


    <Button
        android:id="@+id/austria_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/austria"
        app:layout_constraintBottom_toTopOf="@+id/colombia_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/colombia_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colombia"
        app:layout_constraintBottom_toTopOf="@+id/denmark_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/austria_button" />

    <Button
        android:id="@+id/denmark_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/denmark"
        app:layout_constraintBottom_toTopOf="@+id/italy_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colombia_button" />

    <Button
        android:id="@+id/italy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/italy"
        app:layout_constraintBottom_toTopOf="@+id/madagascar_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/denmark_button" />

    <Button
        android:id="@+id/madagascar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/madagascar"
        app:layout_constraintBottom_toTopOf="@+id/poland_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/italy_button" />

    <Button
        android:id="@+id/poland_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poland"
        app:layout_constraintBottom_toTopOf="@+id/switzerland_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/madagascar_button" />

    <Button
        android:id="@+id/switzerland_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switzerland"
        app:layout_constraintBottom_toTopOf="@+id/thailand_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poland_button" />

    <Button
        android:id="@+id/thailand_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thailand"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switzerland_button" />


</androidx.constraintlayout.widget.ConstraintLayout>